deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:      
      - name: my-node-app
        image: dmytromyroshnyk/my-node-app:latest        
        livenessProbe:
          httpGet:
            path: /url
            port: 80
        ports:
        - containerPort: 80
